sg.tf
resource "aws_security_group" "allowtls" {
    name = "allowtls"
    description = "allow tls"
    vpc_id = aws_vpc.mainvpc.id
    ingress = {
        description ="tls from vpc"
        from_port= 22
        to_port=22
        protocol="tcp"
        cidr_blocks=["0.0.0.0/0"]

    }
ingress {
    description      = "TLS from VPC"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  egress = {
    from_port=0
    to_port=0
    protocol="-1"
    cidr_blocks= ["0.0.0.0/0"]
  }
  tags={
    Name="allow_tls"
  }

}
resource "aws_security_group" "allow_tls_db"{
    name        = "allow_tls_db"
  description = "Allow TLS inbound traffic"
  vpc_id      = aws_vpc.mainvpc.id
  ingress {
    description      = "TLS from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "TLS from VPC"
    from_port        = 3306
    to_port          = 3306
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_tls_db"
  }

}
